--- a/css/returns.css
+++ b/css/returns.css
@@ -1,6 +1,6 @@
 .nav-item, .nav-link,.active, .navbar-nav a{
     text-decoration: none;
-} 
+}
 body{
 font-size:14px;
 font-family:Verdana, Geneva, Tahoma, sans-serif;
@@ -30,13 +30,13 @@ float:left;
     background-color: rgb(52, 102, 102);
 }
 /* CLEARING THE FLOAT */
-.clearfix:before,
-.clearfix:after {
+.bd-clearfix:before,
+.bd-clearfix:after {
     content: " "; /* 1 */
     display: table; /* 2 */
 }
 
-.clearfix:after {
+.bd-clearfix:after {
     clear: both;
 }
 .bd-theinput{
@@ -59,7 +59,7 @@ float:left;
     padding: 5px 20px;
 }
 /* Homepage*/
-.bd-table1{   
+.bd-table1{
     margin-top: 0%;
     margin-right: 5%;
     margin-bottom: 0%;
@@ -79,15 +79,26 @@ a:hover{
 }
 a{
     text-decoration: none;
-    color: rgb(152, 116, 105); 
+    color: rgb(152, 116, 105);
 }
 .bd-part2{
-    background-color: rgb(43, 60, 60);    color: rgb(152, 116, 105); 
+    background-color: rgb(43, 60, 60);    color: rgb(152, 116, 105);
 
 }
 body{
     margin-left:0px;
-    margin-right: 0px; 
+    margin-right: 0px;
     margin-bottom:0px;
 
 }
+.row{
+    margin-left:33%;
+}
+.btn, .btn-sm, .animated-button{
+    padding:8px 45px;
+    border-bottom: 1px solid black;
+    margin-top:5px;
+}
+/* .bd-lastone{
+    border-bottom: 1px solid black;
+} */
