--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ ul li{
     background-color: #fdf7f7;
     box-shadow: 0px 9px 11px 0px rgba(0,0,0,0.2); 
     padding: 2px 3px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
     /* CHANGE THE FONT FAMILY */
 }
 .bd-countries{
@@ -78,4 +79,6 @@ a:hover{
 figure{ 
     display: inline-flex;
 }
-.bd-230{width:230px;}
+.bd-230{
+    width:230px;
+}
