--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,7 @@ ul li{
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     /* CHANGE THE FONT FAMILY */
 }
-.bd-countries{
-    margin-left: 800px;
-}
+
 a{
     text-decoration: none;
     color: rgb(152, 116, 105); 
@@ -28,7 +26,6 @@ li{
 .bd-sale{
     background-color: rgb(43, 60, 60);
     margin:0;
-    padding-bottom: 380px;
 }
 body{
     margin-left:0px;
@@ -37,12 +34,18 @@ body{
     color: rgb(152, 116, 105); 
 
 }
+.bd-heading-container{
+    width: 100%;
+    height: 340px;
+    display: flex;
+   justify-content: center;
+   align-items: center;
+}
 .bd-heading2{
    font-size: 40px;
    font-family:Verdana, Geneva, Tahoma, sans-serif;
    position: absolute;
-   padding-left: 480px;
-   margin-top:135px;
+   
 }
 h3{
     font-size: 25px;
@@ -82,11 +85,12 @@ figure{
 .bd-230{
     width:230px;
 }
+.bd-full-block{
+    width: 100%;
+    float: left;
+}
 /* Responsive */
-@media (min-width: 375px) {
-  .bd-container{
-    width:100%
-  }
+@media (max-width: 391px) {
   .bd-listaul, .bd-lii, .bd-li, .bd-aa{
     width:100%;
     display:block;
@@ -97,23 +101,31 @@ figure{
     padding-left:0px;
     margin-left:0px;   
  }
- .bd-li, .bd{
-   margin-left:-300px;
+ .bd-li{
+    font-size: 16px;
+    padding-right: 0;
  }
  .bd-name{
     font-size: 50px;
-    margin-left:-600px;
  }
   .bd-sale{
-   padding:20% 160% 20%;
+   display: flex;
+   flex-direction: column;
+   float: left;
+   width: 100%;
+  }
+  .bd-sale>div{
+    float: left;
+    width: 100%;
   }
   body{
     margin:0;
     padding:0;
   } 
   .bd-heading2{
-   font-size:65px;
-   margin-left:-100%;
-   margin-top:-300px;
+   font-size:35px;
+   float: left;
+   width: 100%;
+   padding-left: 20px;
 }
  }
